--- a/mobile/android/base/locales/en-US/android_strings.dtd
+++ b/mobile/android/base/locales/en-US/android_strings.dtd
@@ -942,7 +942,7 @@ web sites through the HTML Notifications API. -->
 <!ENTITY ceno_notification_title "CENO Browser service">
 <!ENTITY ceno_notification_description "Tap to stop">
 <!ENTITY ceno_notification_home_description "Home">
-<!ENTITY ceno_notification_purge_description "Panic&#9888;">
-<!ENTITY ceno_notification_purge_do_description "&#128163;">
+<!ENTITY ceno_notification_purge_description "Erase&#9888;">
+<!ENTITY ceno_notification_purge_do_description "Yes">
 <!ENTITY ceno_notification_channel_name "CENO service">
 
